<resources>
    <string name="app_name">Fit and Fine</string>
    <string name="app_authorities">ccom.lambton.capstone_wic_fitandfine</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_done">Done</string>
    <string name="all_select">Select</string>
    <string name="all_ok">Ok</string>
    <string name="all_settings">Settings</string>
    <string name="all_date">Date</string>
    <string name="all_next">Next</string>
    <string name="all_edit">Edit</string>
    <string name="widget_background">widget background</string>
    <string name="add_exercise_button">Add exercise button</string>
    <string name="add_weight_fab_button">Add weight Fab button</string>
    <string name="add_workout_fab_button">Add workout FAB button</string>
    <string name="all_pain_level">Pain Level</string>
    <string name="all_pain_type">Pain Type</string>
    <string name="empty_image">empty image</string>
    <string name="it_s_a_bit_lonely_here">It\'s a bit lonely here....</string>
    <string name="get_started_by_adding_a_workout">Get started by adding a workout</string>
    <string name="all_pain_area">Pain Area</string>
    <string name="all_email">Email</string>
    <string name="toast_check_connection">Please check your internet connection</string>
    <string name="all_submit">Submit</string>
    <string name="all_pain">Pain</string>
    <string name="all_medication">Medication</string>
    <string name="all_pain_history">Pain History</string>
    <string name="all_my_therapies">ChatBot</string>
    <string name="all_articles">Articles</string>
    <string name="all_therapies">Therapies</string>
    <string name="all_send">Send</string>
    <string name="all_close">Close</string>
    <string name="loading">Loading…</string>
    <string name="facebook_app_id">239534740763087</string>
    <string name="fb_login_protocol_scheme">fb239534740763087</string>
    <string name="splash_slogan">Making the world feel better\n without addiction</string>
    <string name="login_use_fingerprint_to_unlock">Use fingerprint to unlock</string>
    <string name="login_hint_username">EMAIL</string>
    <string name="login_hint_password">PASSWORD</string>
    <string name="login_text_forgot_password">Forgot Password?</string>
    <string name="login_text_remember_me">Remember Me</string>
    <string name="login_text_sign_in">Sign In</string>
    <string name="login_text_new_user">New to Ask Watson Pain?</string>
    <string name="login_text_create_account">Create Account</string>
    <string name="register_welcome">Welcome</string>
    <string name="register_welcome_message">You\'re a few steps away from better health!\n Fit and Fine is here to help!</string>
    <string name="register_welcome_get_started">Let\'s Get Started</string>
    <string name="register_welcome_have_account">Have an account?</string>
    <string name="register_welcome_log_in_now">Log In Now</string>
    <string name="register_registration">Registration</string>
    <string name="register_message">We just need a few things to make the\n experience right for you</string>
    <string name="register_hint_name">NAME</string>
    <string name="register_hint_email">EMAIL</string>
    <string name="register_hint_phone">PHONE</string>
    <string name="register_hint_password">PASSWORD</string>
    <string name="register_hint_confirm_password">CONFIRM PASSWORD</string>
    <string name="register_medical_disclaimer">Medical Disclaimer</string>
    <string name="register_medical_description">Our service is intended to provide general educational information and to help users better utilize their own health care services.  We do not provide medical advice.</string>
    <string name="register_disclaimer_message1">Here\'s a few important things that you\n should know</string>
    <string name="register_disclaimer_message2">Please read these terms and conditions carefully before using AskWatsonPain.</string>
    <string name="register_disclaimer_message3">These terms and conditions cover all the services we provide to you through our mobile application and our website askwatsonpain.com. You will be asked to accept these terms as part of the user registration process.</string>
    <string name="register_disclaimer_agree">I Agree to the Terms and Conditions</string>
    <string name="dashboard_activity_title">DashboardActivity</string>
    <string name="dashboard_tab_text_dashboard">Dashboard</string>
    <string name="dashboard_tab_text_alerts">Facts</string>
    <string name="dashboard_tab_text_calendar">FAQ</string>
    <string name="dashboard_surveys">Surveys</string>
    <string name="dashboard_personal_insights">Personal Insights</string>
    <string name="dashboard_progress">Progress</string>
    <string name="dashboard_forums">Forums</string>
    <string name="dashboard_blog">Blog</string>
    <string name="therapies_conventional">Conventional</string>
    <string name="therapies_alternative">Alternative</string>
    <string name="therapies_physical">Physical</string>
    <string name="therapies_risk">Safety Issues/ Risk Factors</string>
    <string name="therapies_administration">Route of Administration</string>
    <string name="therapies_form">Form</string>
    <string name="therapies_non_medicinal">Non Medicinal Ingredients</string>
    <string name="therapies_medicinal">Medicinal/ Therapeutic Information</string>
    <string name="therapies_suggested">Suggested</string>
    <string name="therapies_saved">Saved</string>
    <string name="notes_my_notes">My Notes</string>
    <string name="notes_care_provider_notes">Care Provider Notes</string>
    <string name="notes_new_note">New Note</string>
    <string name="notes_attachments">Attachments</string>
    <string name="notes_add_note">Add Note</string>
    <string name="notes_note">Note</string>
    <string name="notes_add_subject">Add Subject</string>
    <string name="notes_subject">Subject</string>
    <string name="notes_entries">Entries</string>
    <string name="notes_take_photo">Take Photo</string>
    <string name="notes_photo_library">Photo Library</string>
    <string name="notes_share_via_email">Share Via Email</string>
    <string name="pain_areas">Pain Areas</string>
    <string name="pain_areas_tracking">Tracking</string>
    <string name="pain_areas_not_tracking">Not Tracking</string>
    <string name="add_pain_pain_detail">Pain Detail</string>
    <string name="add_pain_type">Type</string>
    <string name="add_pain_track_pain">Track Pain</string>
    <string name="add_pain_reminder">Reminder</string>
    <string name="add_pain_remind_me">Remind Me</string>
    <string name="add_pain_notify_me">Notify Me</string>
    <string name="add_pain_repeats">Repeats</string>
    <string name="add_pain_add_medication">Add Medication</string>
    <string name="add_pain_medication_description">These medications are used when logging pain.</string>
    <string name="add_pain_add_therapy">Add Therapy</string>
    <string name="add_pain_therapy_description">These therapies are used when logging pain.</string>
    <string name="add_pain_underlying_causes">Underlying Causes</string>
    <string name="add_pain_enter_text">Enter Text</string>
    <string name="add_pain_enter_medication">Enter Medication</string>
    <string name="add_pain_enter_therapy">Enter Therapy</string>
    <string name="add_pain_area">Add Pain Area</string>
    <string name="add_to_pain_area">Add to Pain Area</string>
    <string name="edit_pain_level_starting">Pain Level (Starting)</string>
    <string name="privacy_policy_description">The privacy of personal information is of paramount importance to AWP and its users. AWP follows strict HIPAA guidelines with respect to the collection, storage and treatment of personal information - https://www.hhs.gov/hipaa/for-professionals/privacy/index.html. As a further safeguard, blockchain technology is the backbone of AWP’s data storage and transfer. Blockchain uses best practice data encryption to ensure the most secure environment for the privacy of your personal information. </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_pain">WorkOut</string>
    <string name="default_workout_sign">default workout sign</string>
    <string name="log_pain_level">Log Pain Level</string>
    <string name="log_pain_hows_your_pain">How is your pain today?</string>
    <string name="delete_icon">delete icon</string>
    <string name="edit_icon">edit icon</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_welcome_fit_fine">Welcome to\nFit &amp; Fine</string>
    <string name="about_slogan">Find everything you need to crush your fitness goals!</string>
    <string name="about_opening_paragraphs">Fit &amp; Fine showcases a different approach to a fitness app with a chatbot that makes the data collection process more personal and fun.</string>
    <string name="about_our_policies">Our Policies</string>
    <string name="about_policies_paragraph">With competent personnel, appropriate production equipment and continuous improvements according to the Lean concept we ensure high quality products with short lead times and delivery with high precision</string>
    <string name="about_medical_awareness">Medical Awareness</string>
    <string name="about_medical_awareness_paragraph">We empower healthcare providers and patients to collaborate and discover suitable treatment options for chronic pain. The knowledge gained by Watson supports patients with chronic pain by giving them a deeper understanding to help monitor and manage their conditions.</string>
    <string name="about_need_help">Need Help?</string>
    <string name="about_need_help_paragraph">We are incredibly responsive to your requests and value your questions. We are here to help, feel free to reach out to us.</string>
    <string name="about_contact_fit_fine">Contact Fit &amp; Fine</string>
    <string name="menu_patient_profile">Profile</string>
    <string name="menu_patient_alerts">Alerts</string>
    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_treatment">Treatment</string>
    <string name="menu_patient_notes">Notes</string>
    <string name="menu_patient_social">Social</string>
    <string name="menu_personality_profile">Personality Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="nav_view_ask_watson_button">Ask Watson</string>
    <string name="nav_header_static_hi_user">Hi User!</string>
    <string name="font_lato_regular">fonts/Lato-Regular.ttf</string>
    <string name="font_test">fonts/test.ttf</string>
    <string name="font_lato_light">fonts/Lato-Light.ttf</string>
    <string name="font_lato_bold">fonts/Lato-Bold.ttf</string>
    <string name="font_lato_italic">fonts/Lato-Italic.ttf</string>
    <string name="font_lato_bold_italic">fonts/Lato-BoldItalic.ttf</string>
    <string name="alert_ok_title">Ok</string>
    <string name="alert_cancel_title">Cancel</string>
    <string name="alert_network_error">Network not available. Please try again later.</string>
    <string name="toast_no_fingerprint_sensor_found">Your Device does not have a Fingerprint Sensor</string>
    <string name="alert_fingerprint_permission_not_enabled">Fingerprint authentication permission not enabled</string>
    <string name="screen_title_terms_and_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="layout_bottom_customer_care_title">Customer Care</string>
    <string name="layout_bottom_customer_care_help_title">Help</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="we_ll_see_you_soon">We\'ll see you soon!</string>
    <string name="success_image_not_a_button">Success image - not a button</string>
</resources>