<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        style="@style/top_toolbar_small"
        app:contentInsetStart="0dp">

        <TextView
            style="@style/textView"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/about"
            android:textSize="@dimen/font_extra_big" />

        <TextView
            android:id="@+id/textview_about_close"
            style="@style/textView"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_between_field"
            android:text="@string/all_close"
            android:textColor="#BA98FA"
            android:textSize="@dimen/font_extra_big" />

        <TextView
            android:id="@+id/textview_about_contact_us"
            style="@style/textView"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_between_field"
            android:text="@string/about_contact_us"
            android:textColor="#BA98FA"
            android:textSize="@dimen/font_extra_big" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageview_about_divider"
        style="@style/imageView.divider"
        android:layout_below="@id/toolbar_about" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_about_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#BA98FA">

                <TextView
                    android:id="@+id/textview_about_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_between_field"
                    android:layout_marginTop="@dimen/margin_extra_big"
                    android:text="@string/about_welcome_fit_fine"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_display1"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageview_about_watson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textview_about_welcome"
                    android:layout_marginTop="@dimen/margin_extra_big"
                    android:src="@drawable/watson_logo_3x" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageview_about_watson"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:layout_marginTop="@dimen/margin_between_field"
                    android:gravity="center"
                    android:text="@string/about_slogan"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_caption" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_between_field"
                android:text="@string/about_opening_paragraphs"
                android:textColor="@color/about_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_between_field"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/about_our_policies"
                android:textColor="@color/generic_text_color"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_between_field"
                android:text="@string/about_policies_paragraph"
                android:textColor="@color/about_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_between_field"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/about_medical_awareness"
                android:textColor="@color/generic_text_color"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_between_field"
                android:text="@string/about_medical_awareness_paragraph"
                android:textColor="@color/about_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_between_field"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/about_need_help"
                android:textColor="@color/generic_text_color"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_between_field"
                android:text="@string/about_need_help_paragraph"
                android:textColor="@color/about_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_between_field"
                android:paddingLeft="@dimen/margin_between_field"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/about_contact_fit_fine"
                android:textColor="#BA98FA" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>