<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkOutActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_log_pain"
        style="@style/top_toolbar_small"
        android:layout_width="414dp"
        android:layout_height="50dp"
        android:background="@color/babypink"
        app:contentInsetStart="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/textView"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/log_pain"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_extra_big"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="14dp" />


        <TextView
            android:id="@+id/textview_log_pain_done"

            android:layout_width="50dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_back_iconb"
            android:gravity="left"
            tools:layout_editor_absoluteY="20dp" />

    </androidx.appcompat.widget.Toolbar>


    <com.lambton.capstone_wic_fitandfine.adapter.EmptyRecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="53dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_fitness_center_orange_24px"
            android:contentDescription="@string/empty_image" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_shelter_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rale_bold"
            android:paddingTop="10dp"
            android:text="@string/it_s_a_bit_lonely_here"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ralelight"
            android:paddingTop="2dp"
            android:text="@string/get_started_by_adding_a_workout"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="455dp"
        android:clickable="true"
        android:contentDescription="@string/add_workout_fab_button"
        android:elevation="6dp"
        android:focusable="true"
        app:backgroundTint="@color/babypink"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/babypink"
        app:srcCompat="@drawable/ic_add_black_24px" />



</androidx.constraintlayout.widget.ConstraintLayout>

