<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/con"
        android:layout_width="403dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/corner_bg"
        android:padding="6dp">

        <TextView
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/rale_bold"
            android:text="@string/success"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/success"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ralemedium"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            tools:text="quote" />

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/ok"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ralemedium"
            android:text="@string/we_ll_see_you_soon"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/corner_bgc"
            android:elevation="4dp"
            android:fontFamily="@font/rale_bold"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabfake"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_above="@id/con"
        android:contentDescription="@string/success_image_not_a_button"
        android:src="@drawable/ic_done_black_24dp"
        app:backgroundTint="@color/babypink"
        app:elevation="0dp"
        app:layout_anchor="@id/con"
        app:layout_anchorGravity="center_horizontal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>